modified Servlet for processing checkboxes - now in redirects to Confirmation servlet showing how to do redirects and pass atributes to request when do redirect.

--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -30,6 +30,16 @@
         <url-pattern>/checkboxeshandlerservlet</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>ConfirmationServlet</servlet-name>
+        <servlet-class>ru.antony.ConfirmationServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ConfirmationServlet</servlet-name>
+        <url-pattern>/confirmationservlet</url-pattern>
+    </servlet-mapping>
+    
+
     <welcome-file-list>
         <welcome-file>/dataentry.html</welcome-file>
     </welcome-file-list>
