Created two jsp pages which display implicit jsp objects. One jsp page (implicitojects.jsp) stores 3 atributes of three kinds. One of application scope, another of session scope and last one of request scope respectively. This jsp page also displays some parameters. The second jsp page (implicitobjects2.jsp) displays the stored attributes that were saved at implicitojects.jsp. The value of the last attribute is null. Also the second jsp page displays object that were attached to application scope.
Also here was created two jsp pages (buggy.jsp and error.jsp) to demonstrate the errorPage attribute
~~~~~~
Создал две страницы JSP, которые отображают неявные объекты JSP. В одной странице jsp (implicitobjects.jsp) сохраняются 3 атрибута трех видов. Один из области приложения, другой из области сеанса и последний из области запроса соответственно. Эта страница JSP также отображает некоторые параметры. Вторая страница jsp (implicitobjects2.jsp) отображает сохраненные атрибуты, которые были сохранены в implicitobjects.jsp ранее. Значение последнего атрибута равно null. Также на второй странице jsp отображаются объекты, присоединенные к контексту приложения.

Также здесь были созданы две страницы jsp (buggy.jsp и error.jsp) для демонстрации атрибута errorPage

--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -38,7 +38,20 @@
         <servlet-name>ConfirmationServlet</servlet-name>
         <url-pattern>/confirmationservlet</url-pattern>
     </servlet-mapping>
-    
+
+    <servlet>
+        <servlet-name>ImplicitObjectsJSP</servlet-name>
+        <jsp-file>/implicitobjects.jsp</jsp-file>
+        <init-param>
+            <param-name>webxmlparam</param-name>
+            <param-value>Это устанавливается в файле web.xml</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ImplicitObjectsJSP</servlet-name>
+        <url-pattern>/implicitobjects.jsp</url-pattern>
+    </servlet-mapping>
+
 
     <welcome-file-list>
         <welcome-file>/dataentry.html</welcome-file>
